--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     ],
     "require": {
         "roave/security-advisories": "dev-latest",
-        "fakerphp/faker": "^1.21"
+        "fakerphp/faker": "^1.21",
+        "symfony/polyfill-uuid": "^1.27"
     }
 }
